[gd_scene load_steps=6 format=3 uid="uid://dqlnvkakydt46"]

[ext_resource type="Script" path="res://addons/script_search/src/scene_scripts/SearchMenu/SearchBox.gd" id="1_0s61u"]
[ext_resource type="PackedScene" uid="uid://o4ytvvnx6xjw" path="res://addons/script_search/scenes/SearchMenu/SearchInput.tscn" id="2_1xhlp"]
[ext_resource type="Texture2D" uid="uid://c51e76x4r4f78" path="res://addons/script_search/res/icon_config.png" id="3_m3cqi"]
[ext_resource type="Script" path="res://addons/script_search/src/scene_scripts/SearchMenu/ConfigButton.gd" id="4_1h8oy"]
[ext_resource type="Script" path="res://addons/script_search/src/scene_scripts/SearchMenu/FileButtons.gd" id="5_sdpfb"]

[node name="SearchBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0s61u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/MarginContainer"]
layout_mode = 2
split_offset = 10
collapsed = true
dragger_visibility = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/MarginContainer/VSplitContainer"]
layout_mode = 2
collapsed = true
dragger_visibility = 1

[node name="SearchInput" parent="Panel/MarginContainer/VSplitContainer/HSplitContainer" instance=ExtResource("2_1xhlp")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="ConfigButton" type="TextureButton" parent="Panel/MarginContainer/VSplitContainer/HSplitContainer"]
modulate = Color(0.368627, 0.388235, 0.411765, 1)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
tooltip_text = "Edit Configurations"
focus_mode = 0
texture_normal = ExtResource("3_m3cqi")
script = ExtResource("4_1h8oy")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VSplitContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="FileButtons" type="VBoxContainer" parent="Panel/MarginContainer/VSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("5_sdpfb")

[connection signal="highlight_next" from="Panel/MarginContainer/VSplitContainer/HSplitContainer/SearchInput" to="Panel/MarginContainer/VSplitContainer/ScrollContainer/FileButtons" method="_on_highlight_next"]
[connection signal="highlight_prev" from="Panel/MarginContainer/VSplitContainer/HSplitContainer/SearchInput" to="Panel/MarginContainer/VSplitContainer/ScrollContainer/FileButtons" method="_on_highlight_prev"]
[connection signal="selected" from="Panel/MarginContainer/VSplitContainer/HSplitContainer/SearchInput" to="Panel/MarginContainer/VSplitContainer/ScrollContainer/FileButtons" method="_on_selected"]
[connection signal="text_changed" from="Panel/MarginContainer/VSplitContainer/HSplitContainer/SearchInput" to="Panel/MarginContainer/VSplitContainer/ScrollContainer/FileButtons" method="_on_search_input_text_changed"]
[connection signal="button_down" from="Panel/MarginContainer/VSplitContainer/HSplitContainer/ConfigButton" to="Panel/MarginContainer/VSplitContainer/HSplitContainer/ConfigButton" method="_on_button_down"]
[connection signal="mouse_entered" from="Panel/MarginContainer/VSplitContainer/HSplitContainer/ConfigButton" to="Panel/MarginContainer/VSplitContainer/HSplitContainer/ConfigButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/MarginContainer/VSplitContainer/HSplitContainer/ConfigButton" to="Panel/MarginContainer/VSplitContainer/HSplitContainer/ConfigButton" method="_on_mouse_exited"]
